[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://Fonts/text_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Audio/edited_pigscream.wav" type="AudioStream" id=3]
[ext_resource path="res://Sprites/torch_logo.png" type="Texture" id=4]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 11, 11 )
modulate_color = Color( 0.533333, 0.533333, 0.533333, 1 )

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 11, 11 )
modulate_color = Color( 0.192157, 0.192157, 0.192157, 1 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 11, 11 )

[node name="CanvasLayer" type="CanvasLayer"]
layer = 2
follow_viewport_enable = true
script = ExtResource( 1 )

[node name="Start_view" type="Node2D" parent="."]

[node name="Opening_text" type="ColorRect" parent="Start_view"]
margin_left = 189.0
margin_top = 42.0
margin_right = 1121.0
margin_bottom = 387.0
color = Color( 0.513726, 0.498039, 0.360784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opening_text22" type="Label" parent="Start_view/Opening_text"]
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
margin_left = -463.0
margin_top = -21.5
margin_right = 466.0
margin_bottom = 476.5
custom_fonts/font = ExtResource( 2 )
text = "This is H.M.S. Brave, ship tasked to explore the icy north.

Two months into your journey a mysterious fewer broke out among the crew.
It did not kill but sapped the person of strength until all they could do is sleep.
Only three men remained uninfected.

Then the temperature dropped far faster that it should have. The ship was caught in ice
and remaining crew was not enough to break it out.

All they can do now is wait for spring or enough crew to recover.

Another short day is over and sun is going down
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Morning1_text" type="ColorRect" parent="Start_view"]
visible = false
margin_left = 161.455
margin_top = 80.0
margin_right = 1127.46
margin_bottom = 179.0
color = Color( 0.513726, 0.498039, 0.360784, 1 )

[node name="Morning1_text1" type="Label" parent="Start_view/Morning1_text"]
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
margin_left = -470.0
margin_top = 16.1
margin_right = 473.0
margin_bottom = 488.1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "As morning comes the creatures stop attacking. They might come again next night.
Better prepare"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Generic_text" type="ColorRect" parent="Start_view"]
visible = false
margin_left = 402.658
margin_top = 93.0224
margin_right = 879.658
margin_bottom = 235.022
color = Color( 0.513726, 0.498039, 0.360784, 1 )

[node name="Generic_text_text" type="Label" parent="Start_view/Generic_text"]
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
margin_left = -236.5
margin_top = 2.8
margin_right = 237.5
margin_bottom = 565.8
custom_fonts/font = ExtResource( 2 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "Another night survived
The ice has melted enough!
You can escape!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue_button" type="Button" parent="Start_view"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 562.52
margin_top = 391.498
margin_right = 711.52
margin_bottom = 433.498
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Start_view/Continue_button"]
margin_right = 150.0
margin_bottom = 43.0
text = "Continue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Win_view" type="Node2D" parent="."]
visible = false

[node name="Label" type="Label" parent="Win_view"]
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
margin_left = 311.0
margin_top = 72.0
margin_right = 972.0
margin_bottom = 564.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "Yay you won"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue_button" type="Button" parent="Win_view"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 560.0
margin_top = 360.0
margin_right = 709.0
margin_bottom = 402.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Win_view/Continue_button"]
margin_right = 150.0
margin_bottom = 43.0
text = "Continue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionUI" type="Node2D" parent="."]

[node name="Day_meter" type="Node2D" parent="ActionUI"]
visible = false

[node name="ProgressBar" type="ProgressBar" parent="ActionUI/Day_meter"]
margin_left = 1.41422
margin_top = 19.0919
margin_right = 281.414
margin_bottom = 56.0919
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ActionUI/Day_meter"]
margin_right = 83.0
margin_bottom = 14.0
text = "Day Progress"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Build" type="Node2D" parent="ActionUI"]

[node name="Torch_build" type="Button" parent="ActionUI/Build"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 604.0
margin_top = 649.0
margin_right = 666.0
margin_bottom = 708.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="pressed" from="Start_view/Continue_button" to="." method="_on_Continue_button_pressed"]
[connection signal="pressed" from="ActionUI/Build/Torch_build" to="." method="_on_Torch_build_pressed"]
